fix/ui: less margin-top on mobile for loginForm's

--- a/assets/sass/fractal6.scss
+++ b/assets/sass/fractal6.scss
@@ -1023,6 +1023,9 @@ figcaption {
     @include desktop {
         min-width: 400px;
     }
+    @include mobile {
+       margin-top: 10px;
+    }
 }
 
 #createOrga {
